--- a/DES/DEs_style.css
+++ b/DES/DEs_style.css
@@ -1,44 +1,340 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-image: url("https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?q=80&w=1799&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-position: 20cqb;
+    text-align: center;
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+	align-items: center;
+	position: relative;
+	background: linear-gradient(to bottom right, #070630 0%,#060454 100%);
+	min-height: 100vh;
+}
+.animation-container {
+	display: block;
+	position: relative;
+	width: 800px;
+	max-width: 100%;
+	margin: 0 auto;
+	
+	.lightning-container {
+		position: absolute;
+		top: 50%;
+		left: 0;
+		display: flex;
+		transform: translateY(-50%);
+		
+		.lightning {
+			position: absolute;
+			display: block;
+			height: 12px;
+			width: 12px;
+			border-radius: 12px;
+			transform-origin: 6px 6px;
+
+			animation-name: woosh;
+			animation-duration: 1.5s;
+			animation-iteration-count: infinite;
+			animation-timing-function: cubic-bezier(0.445, 0.050, 0.550, 0.950);
+			animation-direction: alternate;
+
+			&.white {
+				background-color: white;
+				box-shadow: 0px 50px 50px 0px transparentize(white, 0.7);
+			}
+
+			&.red {
+				background-color: #fc7171;
+				box-shadow: 0px 50px 50px 0px transparentize(#fc7171, 0.7);
+				animation-delay: 0.2s;
+			}
+		}
+	}
+	
+	
+	.boom-container {
+		position: absolute;
+		display: flex;
+		width: 80px;
+		height: 80px;
+		text-align: center;
+		align-items: center;
+		transform: translateY(-50%);
+    left: 200px;
+    top: -145px;
+		
+		.shape {
+			display: inline-block;
+			position: relative;
+			opacity: 0;
+			transform-origin: center center;
+			
+			&.triangle {
+				width: 0;
+				height: 0;
+				border-style: solid;
+				transform-origin: 50% 80%;
+				animation-duration: 1s;
+				animation-timing-function: ease-out;
+				animation-iteration-count: infinite;
+				margin-left: -15px;
+				border-width: 0 2.5px 5px 2.5px;
+				border-color: transparent transparent #42e599 transparent;
+				animation-name: boom-triangle;
+				
+				&.big {
+					margin-left: -25px;
+					border-width: 0 5px 10px 5px;
+					border-color: transparent transparent #fade28 transparent;
+					animation-name: boom-triangle-big;
+				}
+			}
+			
+			&.disc {
+				width: 8px;
+				height: 8px;
+				border-radius: 100%;
+				background-color: #d15ff4;
+				animation-name: boom-disc;
+				animation-duration: 1s;
+				animation-timing-function: ease-out;
+				animation-iteration-count: infinite;
+			}
+			
+			&.circle {
+				width: 20px;
+				height: 20px;
+				animation-name: boom-circle;
+				animation-duration: 1s;
+				animation-timing-function: ease-out;
+				animation-iteration-count: infinite;
+				border-radius: 100%;
+				margin-left: -30px;
+				
+				&.white {
+					border: 1px solid white;
+				}
+				
+				&.big {
+					width: 40px;
+					height: 40px;
+					margin-left: 0px;
+					
+					&.white {
+						border: 2px solid white;
+					}
+				}
+			}
+			
+			&:after {
+				background-color: rgba(178, 215, 232, 0.2);
+			}
+		}
+		
+		.shape {
+			&.triangle, &.circle, &.circle.big, &.disc {
+				animation-delay: .38s;
+				animation-duration: 3s;
+			}
+			
+			&.circle {
+				animation-delay: 0.6s;
+			}
+		}
+		
+		&.second {
+			left: 485px;
+			top: 155px;
+			.shape {
+				&.triangle, &.circle, &.circle.big, &.disc {
+					animation-delay: 1.9s;
+				}
+				&.circle {
+					animation-delay: 2.15s;
+				}
+			}
+		}
+	}
 }
 
+@keyframes woosh {
+	0% {
+		width: 12px;
+		transform: translate(0px, 0px) rotate(-35deg);
+	}
+	15% {
+		width: 50px;
+	}
+	30% {
+		width: 12px;
+		transform: translate(214px, -150px) rotate(-35deg);
+	}
+	30.1% {
+		transform: translate(214px, -150px) rotate(46deg);
+	}
+	50% {
+		width: 110px;
+	}
+	70% {
+		width: 12px;
+		transform: translate(500px, 150px) rotate(46deg);
+	}
+	70.1% {
+		transform: translate(500px, 150px) rotate(-37deg);
+	}
+	
+	85% {
+		width: 50px;
+	}
+	100% {
+		width: 12px;
+		transform: translate(700px, 0) rotate(-37deg);
+	}
+}
+
+@keyframes boom-circle {
+	0% {
+		opacity: 0;
+	}
+	5% {
+		opacity: 1;
+	}
+	30% {
+		opacity: 0;
+		transform: scale(3);
+	}
+	100% {
+	}
+}
+
+@keyframes boom-triangle-big {
+	0% {
+		opacity: 0;
+	}
+	5% {
+		opacity: 1;
+	}
+	
+	40% {
+		opacity: 0;
+		transform: scale(2.5) translate(50px, -50px) rotate(360deg);
+	}
+	100% {
+	}
+}
+
+@keyframes boom-triangle {
+	0% {
+		opacity: 0;
+	}
+	5% {
+		opacity: 1;
+	}
+	
+	30% {
+		opacity: 0;
+		transform: scale(3) translate(20px, 40px) rotate(360deg);
+	}
+	
+	100% {
+	}
+}
+
+@keyframes boom-disc {
+	0% {
+		opacity: 0;
+	}
+	5% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 0;
+		transform: scale(2) translate(-70px, -30px);
+	}
+	100% {
+		
+	}
+}
+.footer {
+	color: white;
+	font-size: 10px;
+	position: fixed;
+	bottom: 0;
+	font-weight: 200;
+	padding: 10px 20px;
+	
+	a {
+		&,
+		&:hover,
+		&:focus,
+		&:visited {
+			color: #c6c6c6;
+		}
+	}
+}
 .container {
-    background-color: #fff;
+    max-width: 550px;
+    margin: 50px left;
+    margin-top: 45px;
+    margin-left: 45px;
     padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    border: 3px solid #ffffff;
-    border-radius: 20px;
-    background-color: #f5f2f2;
+    border: 4px solid #ccc;
+    border-radius: 15px;
+    background-color: #273987;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	animation: fadeInUp 1s ease-out;
 }
 
-h1 {
-    color: #333;
-    text-align: center;
-}
+@keyframes fadeInUp {
+	from {
+	  opacity: 0;
+	  transform: translateY(20px);
+	}
+	to {
+	  opacity: 1;
+	  transform: translateY(0);
+	}
+  }
+@keyframes fadeIn {
+	from {
+	  opacity: 0;
+	}
+	to {
+	  opacity: 1;
+	}
+  }
 
-input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+header {
     margin-bottom: 20px;
 }
 
-button {
-    display: block;
+h1 {
+    font-size: 32px;
+    color: #fffbfb;
+    margin-bottom: 10px;
+}
+
+img {
+    border-radius: 10px;
     width: 100%;
-    padding: 10px;
+    max-width: 400px;
+    height: auto;
+    margin: 20px 0;
+}
+
+.cipher-options {
+    display: flex;
+    flex-direction: row;
+}
+
+.cipher-button {
+    display: block;
+    width: 96%;
+    padding: 12px;
     margin: 10px 0;
-    background-color: #0074d9;
-    color: #fff;
+    background-color: #ffffff;
+    color: #0a0a0a;
     text-decoration: none;
     border: none;
     border-radius: 5px;
@@ -48,17 +344,14 @@ button {
     transition: background-color 0.3s, transform 0.1s;
 }
 
-button:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
+.cipher-button:hover {
+    background-color:orange;
+    color: black;
+    border-color: yellow;
+    border-radius: 2px;
+    transform: scale(1.05)
 }
 
-button:focus {
+.cipher-button:focus {
     outline: none;
-}
-
-
-#output {
-    margin-top: 20px;
-    color: #333;
 }
